--- a/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P330.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P330.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.L0_P330" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="60" Canvas.Top="660" StatusComponent="L0+322-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="128" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L0+322-21-CV1" VisibilitySignal="MAT1">
+    <Labels:Pipe Width="136" Canvas.Top="698" StatusComponent="L0+322-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="90" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L0+322-21-CV1" VisibilitySignal="MAT1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -38,15 +38,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+328-01-MA1" Color="Air" Canvas.Left="76" Canvas.Top="782" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="250" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+328-01-MA1" PipeHeight="Medium" Canvas.Left="165" Canvas.Top="779" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+326-01-MA1" PipeHeight="Medium" Canvas.Left="127" Canvas.Top="746" HorizontalAlignment="Center" VerticalAlignment="Top" >
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <RotateTransform Angle="90"/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
+    <Labels:Pipe Width="247" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+328-01-MA1" PipeHeight="Medium" Canvas.Left="165" Canvas.Top="768" HorizontalAlignment="Center" VerticalAlignment="Center" Height="13" />
     <Labels:Pipe Width="60" Canvas.Top="602" StatusComponent="L0+322-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="128" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -54,10 +46,10 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="64" StatusComponent="L0+350-01-MA1" PipeHeight="Medium" Canvas.Left="941" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="74" StatusComponent="L0+350-01-MA1" PipeHeight="Medium" Canvas.Left="931" Canvas.Top="222" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="99" StatusComponent="L0+328-01-MA1" PipeHeight="Medium" Canvas.Left="406" Canvas.Top="114" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="31" Color="Water" StatusComponent="L0+370-01-MA1" Canvas.Left="457" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="674" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+328-01-MA1" PipeHeight="Medium" Canvas.Left="73" Canvas.Top="447" HorizontalAlignment="Center" VerticalAlignment="Top" >
+    <Labels:Pipe Width="664" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+328-01-MA1" PipeHeight="Medium" Canvas.Left="78" Canvas.Top="442" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -155,7 +147,7 @@
     <Labels:Pipe Color="Water" Width="77" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+380-21-CV1" Canvas.Left="1355" Canvas.Top="427" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+380-01-MA1" PipeHeight="Medium" Canvas.Left="1388" Canvas.Top="314" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="96" StatusComponent="L0+351-01-MA1" PipeHeight="Medium" Canvas.Left="1109" Canvas.Top="424" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="152" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+350-01-MA1" PipeHeight="Medium" Canvas.Left="925" Canvas.Top="285" HorizontalAlignment="Center" VerticalAlignment="Top" >
+    <Labels:Pipe Width="144" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+350-01-MA1" PipeHeight="Medium" Canvas.Left="929" Canvas.Top="289" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -210,9 +202,6 @@
     <Machines:V01_DV_Diverter Width="100" VerticalAlignment="Top" Canvas.Top="94" RenderTransformOrigin="0.5,0.5" Canvas.Left="1258" Height="72" HorizontalAlignment="Center"/>
     <Machines:V01_SLX_Silo_wAgitator Canvas.Left="188" Canvas.Top="269" Height="250" Width="169" HorizontalAlignment="Center" VerticalAlignment="Top" Color="DryMaterial" ComponentName="L0+320-43-LT1" TrendName="LEVEL"/>
     <Machines:V01_Radar Canvas.Left="284" Canvas.Top="243" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_VS_Airlock Canvas.Left="133" Canvas.Top="682" HorizontalAlignment="Center" VerticalAlignment="Top" Width="50" Height="50"/>
-    <Machines:V01_ScarpaTrasporto Canvas.Left="125" Canvas.Top="747" Height="48" Width="72" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="47" Canvas.Top="759" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="434" Canvas.Top="434" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:EXC_HeatExchanger.RenderTransform>
         <TransformGroup>
@@ -255,25 +244,21 @@
     </Rectangle>
     <Machines:V01_CV_Valve Canvas.Left="697" Canvas.Top="801" Height="30" Width="49" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW_Screw_wHopper Canvas.Left="977" Canvas.Top="278" Height="169" Width="153" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_WCE_Centrifuge Canvas.Left="806" Canvas.Top="103" HorizontalAlignment="Left" VerticalAlignment="Center" Height="122" Width="148"/>
     <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="1195" Canvas.Top="419" HorizontalAlignment="Left" Height="20" VerticalAlignment="Center" Width="109"/>
     <Machines:V01_DCE_Centrifuge Canvas.Left="1285" Canvas.Top="305" Height="142" Width="108" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_WaterPump Canvas.Left="198" Canvas.Top="36" Height="44" Width="44" Color="Chemicals" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Machines:V01_CV_Valve_wColor Canvas.Left="1421" Canvas.Top="417" Color="Water" Height="26" Width="48" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="146" Canvas.Top="565" Height="22" Width="145" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1132" Canvas.Top="83" Height="54" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="L0+320-43-LT1" JumpToLabel="L1+239-21-CV1" Canvas.Left="87" Canvas.Top="130" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="L0+320-43-LT1" JumpToLabel="L2+239-21-CV1" Canvas.Left="57" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="L1+383-21-CV1" JumpToLabel="L1+320-43-LT1" Canvas.Left="1434" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:JumpLabel JumpFromLabel="L1+383-21-CV1" JumpToLabel="L2+320-41-LT1" Canvas.Left="1434" Canvas.Top="117" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:JumpLabel JumpFromLabel="L1+383-21-CV1" JumpToLabel="L2+320-43-LT1" Canvas.Left="1434" Canvas.Top="117" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DetailsLabel ComponentName="L0+320-HYD" DetailsPageName="L0_D320" HorizontalAlignment="Center" Canvas.Left="231" Canvas.Top="401" VerticalAlignment="Top" />
     <Labels:DetailsLabel ComponentName="L0+354-HEAT" DetailsPageName="L0_D354" Canvas.Left="498" Canvas.Top="444" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel ComponentName="L0+371-VIEW" DetailsPageName="L0_D371" HideComponentName="True" Canvas.Left="697" Canvas.Top="373" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="38" Canvas.Left="1263" HorizontalAlignment="Left" ComponentName="L0+383-21-CV1"/>
     <Labels:DeviceLabel ComponentName="L0+320-43-LT1" Canvas.Left="292" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L0+322-01-MA1" Canvas.Left="115" Canvas.Top="504" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    <Labels:DeviceLabel ComponentName="L0+328-01-MA1" Canvas.Left="27" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:DeviceLabel ComponentName="L0+326-01-MA1" Canvas.Left="196" Canvas.Top="682" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel ComponentName="L0+330-01-MA1" Canvas.Left="480" Canvas.Top="23" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L0+330-02-MA1" Canvas.Left="579" Canvas.Top="23" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L0+330-03-MA1" Canvas.Left="678" Canvas.Top="23" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -290,9 +275,9 @@
     <Labels:DeviceLabel ComponentName="L0+370-23-CV1" Canvas.Left="676" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L0+351-01-MA1" Canvas.Left="1062" Canvas.Top="233" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L0+351-61-LS1" Canvas.Left="928" Canvas.Top="326" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L0+350-01-MA1" Canvas.Left="855" Canvas.Top="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L0+350-01-MA1" Canvas.Left="853" Canvas.Top="53" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L0+380-21-CV1" Canvas.Left="1398" Canvas.Top="360" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="L0+382-01-MA1" Canvas.Left="1116" Canvas.Top="26" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L0+382-01-MA1" Canvas.Left="1137" Canvas.Top="26" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L0+378-01-MA1" Canvas.Left="1176" Canvas.Top="357" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L0+380-01-MA1" Canvas.Left="1285" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L0+371-22-CV1" Canvas.Left="97" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -307,5 +292,42 @@
       </Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
     </Machines:V01_CV_ValvolaGhigliottina>
     <Labels:DeviceLabel ComponentName="L0+322-21-CV1" Canvas.Left="267" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:DeviceLabel ComponentName="L0+328-01-MA1" Canvas.Left="49" Canvas.Top="693" HorizontalAlignment="Center" VerticalAlignment="Center" />
+    <Labels:Pipe Width="30" Color="Water" StatusComponent="L0+328-21-CV1" Canvas.Left="190" Canvas.Top="730" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_CV_Valve Canvas.Left="217" Canvas.Top="717" Height="31" Width="38" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="28" Color="Water" StatusComponent="L0+328-21-CV1" Canvas.Left="170" Canvas.Top="739" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="-46.467"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="126" Canvas.Top="739" Height="70" Width="63" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L0+328-21-CV1" Canvas.Left="267" Canvas.Top="708" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="20" Color="Water" StatusComponent="L0+382-21-CV1" Canvas.Left="1100" Canvas.Top="76" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_CV_Valve Canvas.Left="1071" Canvas.Top="63" Height="31" Width="38" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="49" Color="Water" StatusComponent="L0+382-21-CV1" Canvas.Left="1111" Canvas.Top="89" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="-143.164"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:DeviceLabel ComponentName="L0+382-21-CV1" Canvas.Left="973" Canvas.Top="54" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1132" Canvas.Top="83" Height="54" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="24" RenderTransformOrigin="0.5,0.5" StatusComponent="L0+350-01-MA1" PipeHeight="Medium" Canvas.Left="924" Canvas.Top="214" HorizontalAlignment="Left" VerticalAlignment="Center" >
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_WCE_Centrifuge Canvas.Left="806" Canvas.Top="98" HorizontalAlignment="Center" VerticalAlignment="Top" Height="122" Width="148"/>
   </Canvas>
 </UserControl>
