--- a/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P430.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P430.xaml
@@ -175,8 +175,6 @@
     <Labels:Pipe Width="49" VisibilityComponent="L2+447-21-CV1" VisibilitySignal="LS2" VerticalAlignment="Top" Canvas.Top="652" StatusComponent="L2+446-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1443" HorizontalAlignment="Center"/>
     <Labels:Pipe Width="33" VisibilityComponent="L2+447-21-CV1" VisibilitySignal="LS1" VerticalAlignment="Top" Canvas.Top="684" StatusComponent="L2+446-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1452" HorizontalAlignment="Center" Color="ByProduct"/>
     <Machines:V01_DV_Diverter Width="80" VerticalAlignment="Top" Canvas.Top="639" RenderTransformOrigin="0.5,0.5" Canvas.Left="1380" Height="62" HorizontalAlignment="Center"/>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="191" Canvas.Top="275" Height="250" Width="169" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="L2+320-41-LT1" Color="WetMaterial" TrendName="LEVEL"/>
-    <Machines:V01_Radar Canvas.Left="284" Canvas.Top="253" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW_Screw_wHopper Canvas.Left="1146" Canvas.Top="144" Height="180" Width="174" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="1281" Canvas.Top="303" HorizontalAlignment="Center" VerticalAlignment="Top" Height="147" Width="172"/>
     <Machines:V01_VSP_SepTank_w4Paddles Canvas.Left="836" Canvas.Top="187" Height="263" Width="210" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -224,14 +222,14 @@
     <Labels:JumpLabel JumpFromLabel="L2+420-01-MA1" JumpToLabel="L2+450-01-MA1" Canvas.Left="479" Canvas.Top="245" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="L2+460-01-MA1" JumpToLabel="L2+475-41-LT1" Canvas.Left="1277" Canvas.Top="490" Direction="Left" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="L2+470-01-MA1" JumpToLabel="L2+475-41-LT1" Canvas.Left="758" Canvas.Top="749" Direction="Left" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:JumpLabel JumpFromLabel="L2+320-41-LT1" JumpToLabel="L2+239-21-CV1" Canvas.Left="87" Canvas.Top="130" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:JumpLabel JumpFromLabel="L2+320-41-LT1" JumpToLabel="L0+383-21-CV1" Canvas.Left="57" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel JumpFromLabel="L2+320-43-LT1" JumpToLabel="L2+239-21-CV1" Canvas.Left="87" Canvas.Top="130" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel JumpFromLabel="L2+320-43-LT1" JumpToLabel="L0+383-21-CV1" Canvas.Left="57" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="L2+383-21-CV1" JumpToLabel="L0+997-BAGS" Canvas.Left="1444" Canvas.Top="732" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel JumpFromLabel="L2+320-41-LT1" JumpToLabel="L0+508-22-CV1" Canvas.Left="747" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DetailsLabel ComponentName="L2+430-VIEW" DetailsPageName="L2_D430" HideComponentName="True" Canvas.Left="980" Canvas.Top="129" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel Canvas.Top="687" Canvas.Left="1281" ComponentName="L2+446-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="584" Canvas.Left="1375" HorizontalAlignment="Center" ComponentName="L2+447-21-CV1"/>
-    <Labels:DeviceLabel ComponentName="L2+320-41-LT1" Canvas.Left="282" Canvas.Top="201" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="L2+320-43-LT1" Canvas.Left="282" Canvas.Top="201" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+458-01-MA1" Canvas.Left="1272" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+460-01-MA1" Canvas.Left="1377" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+430-03-MA1" Canvas.Left="838" Canvas.Top="463" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -249,7 +247,6 @@
     <Labels:DeviceLabel ComponentName="L2+442-01-MA1" Canvas.Left="999" Canvas.Top="783" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+443-01-MA1" Canvas.Left="1133" Canvas.Top="579" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+443-02-MA1" Canvas.Left="992" Canvas.Top="637" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L2+320-01-MA1" Canvas.Left="227" Canvas.Top="334" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel ComponentName="L2+460-21-CV1" Canvas.Left="1101" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="557" Canvas.Top="365" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L2+420-24-CV1" Canvas.Left="455" Canvas.Top="353" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -283,5 +280,8 @@
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="126" Canvas.Top="739" Height="70" Width="63" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L2+328-01-MA1" Canvas.Left="49" Canvas.Top="693" HorizontalAlignment="Center" VerticalAlignment="Center" />
     <Labels:DeviceLabel ComponentName="L2+322-01-MA1" Canvas.Left="115" Canvas.Top="497" HorizontalAlignment="Center" VerticalAlignment="Center" />
+    <Machines:V01_SLX_Silo_wAgitator Canvas.Left="188" Canvas.Top="279" Height="250" Width="169" Color="DryMaterial" ComponentName="L2+320-43-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="L2+320-HYD" DetailsPageName="L2_D320" Canvas.Left="233" Canvas.Top="407" HorizontalAlignment="Center" VerticalAlignment="Center" />
+    <Machines:V01_Radar Canvas.Left="284" Canvas.Top="253" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
