--- a/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P530.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P530.xaml
@@ -130,7 +130,7 @@
     </Machines:External>
     <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="L1+482-01-MA1" JumpToLabel="L1+460-01-MA1" Canvas.Left="94" Canvas.Top="51"/>
     <Labels:JumpLabel JumpFromLabel="L1+510-RINSE" JumpToLabel="L0+508-01-MA1" Canvas.Left="73" Canvas.Top="322" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DetailsLabel ComponentName="L1+810-HYD" DetailsPageName="L1_D810" Canvas.Left="1142" Canvas.Top="250" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:DetailsLabel ComponentName="L1+810-HYD" DetailsPageName="L1_D810" Canvas.Left="1144" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DetailsLabel ComponentName="L1+530-DRY" DetailsPageName="L1_D530" Canvas.Left="580" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="L1+510-VALVE" DetailsPageName="L1_D510" Canvas.Left="477" Canvas.Top="232"/>
     <Labels:DetailsLabel ComponentName="L1+510-RINSE" DetailsPageName="L1_D510_2" Canvas.Left="209" Canvas.Top="332" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -145,8 +145,9 @@
     <Labels:DeviceLabel Canvas.Top="630" Canvas.Left="857" ComponentName="L1+534-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+810-61-LS2" Canvas.Left="1222" Canvas.Top="109" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+812-01-MA1" Canvas.Left="1264" Canvas.Top="384" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    <Labels:DeviceLabel ComponentName="L1+810-43-WT1" Canvas.Left="1142" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L1+846-71-ECS3" Canvas.Left="1267" Canvas.Top="556" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:DeviceLabel ComponentName="L1+810-43-WT1" Canvas.Left="1142" Canvas.Top="188" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L1+846-71-ECS3" Canvas.Left="1238" Canvas.Top="556" HorizontalAlignment="Left" VerticalAlignment="Center"  />
     <Labels:DeviceLabel ComponentName="L1+482-61-LS1" Canvas.Left="128" Canvas.Top="163" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="L1+846-71-ECS4" Canvas.Left="1338" Canvas.Top="556" HorizontalAlignment="Left" VerticalAlignment="Center" />
   </Canvas>
 </UserControl>
