--- a/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P530.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P530.xaml
@@ -47,7 +47,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="74" Canvas.Top="483" StatusComponent="L2+812-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1272" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="118" Canvas.Top="559" StatusComponent="L2+812-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1246" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L2+812-21-CV1" VisibilitySignal="MAT1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -103,7 +103,6 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Rectangle HorizontalAlignment="Center" Height="36" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="416" Canvas.Top="280"/>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="1102" Canvas.Top="118" Height="250" Width="170" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="L2+810-43-WT1" Color="DryMaterial" TrendName="WEIGHT"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="589" Canvas.Top="459" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="307" Canvas.Top="267" Height="186" Width="215" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:CV_Valve Height="35" Width="43" RenderTransformOrigin="0.5,0.5" Canvas.Left="345" Canvas.Top="490" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -119,9 +118,8 @@
     <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="874" Canvas.Top="688" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VS_Airlock Canvas.Left="695" Canvas.Top="581" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_ScarpaTrasporto Canvas.Left="686" Canvas.Top="671" Height="52" Width="78" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="1176" Canvas.Top="441" Height="22" Width="146" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Rectangle Height="2" Stroke="Black" Width="101" RenderTransformOrigin="0.5,0.5" Canvas.Left="1273" Canvas.Top="524" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1350" Canvas.Top="496" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Rectangle Height="2" Stroke="Black" Width="101" RenderTransformOrigin="0.5,0.5" Canvas.Left="1269" Canvas.Top="622" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1361" Canvas.Top="594" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -143,9 +141,31 @@
     <Labels:DeviceLabel Canvas.Top="581" Canvas.Left="751" ComponentName="L2+528-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel Canvas.Top="630" Canvas.Left="857" ComponentName="L2+534-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+812-01-MA1" Canvas.Left="1264" Canvas.Top="384" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    <Labels:DeviceLabel ComponentName="L2+846-71-ECS3" Canvas.Left="1264" Canvas.Top="556" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    <Labels:DetailsLabel ComponentName="L2+810-VIEW" DetailsPageName="L2_D810" Canvas.Left="1145" Canvas.Top="147" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    <Labels:DeviceLabel ComponentName="L2+810-SILO" Canvas.Left="1234" Canvas.Top="208" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:DeviceLabel ComponentName="L2+846-71-ECS3" Canvas.Left="1243" Canvas.Top="654" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel ComponentName="L2+482-61-LS1" Canvas.Left="128" Canvas.Top="163" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_SLX_Silo_wAgitator Canvas.Left="1098" Canvas.Top="118" Height="250" Width="170" Color="DryMaterial" ComponentName="L2+810-43-WT1" TrendName="WEIGHT" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="L2+810-HYD" DetailsPageName="L2_D810" Canvas.Left="1144" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:DeviceLabel ComponentName="L2+810-61-LS2" Canvas.Left="1222" Canvas.Top="109" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L2+810-43-WT1" Canvas.Left="1141" Canvas.Top="188" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L2+812-21-CV1" Canvas.Left="1346" Canvas.Top="482" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:Pipe Width="52" Canvas.Top="471" StatusComponent="L2+812-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="1279" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="1176" Canvas.Top="441" Height="22" Width="146" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="1210" Canvas.Top="495" Height="22" Width="114" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="180.472"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:V01_CV_ValvolaGhigliottina.RenderTransform>
+    </Machines:V01_CV_ValvolaGhigliottina>
+    <Labels:DeviceLabel ComponentName="L2+846-71-ECS4" Canvas.Left="1346" Canvas.Top="654" HorizontalAlignment="Center" VerticalAlignment="Center" />
   </Canvas>
 </UserControl>
