V6120: Update during completition on S7 Attributes

--- a/Prevu.Synoptics.V6120_Novatex/Details/D485.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Details/D485.xaml
@@ -12,11 +12,11 @@
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Width="541" Height="350">
         <Machines:V01_BBF_DoubleBag Canvas.Left="10" Canvas.Top="10" Height="330" Width="523" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="485-41-BAG" SignalName="LSH" Canvas.Left="115" Canvas.Top="71"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="485-41-BAG" SignalName="SEL" Canvas.Left="117" Canvas.Top="205"/>
-        <Labels:SignalLabel ComponentName="485-42-BAG" SignalName="LSH" Canvas.Left="358" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:SignalLabel ComponentName="485-42-BAG" SignalName="SEL" Canvas.Left="360" Canvas.Top="205" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="485-41-BAG" Canvas.Left="105" Canvas.Top="150"/>
-        <Labels:DeviceLabel ComponentName="485-42-BAG" Canvas.Left="348" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="485-BAG1" SignalName="LSH" Canvas.Left="115" Canvas.Top="71"/>
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="485-BAG1" SignalName="SEL" Canvas.Left="117" Canvas.Top="205"/>
+        <Labels:SignalLabel ComponentName="485-BAG2" SignalName="LSH" Canvas.Left="358" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:SignalLabel ComponentName="485-BAG2" SignalName="SEL" Canvas.Left="360" Canvas.Top="205" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="485-BAG1" Canvas.Left="105" Canvas.Top="150"/>
+        <Labels:DeviceLabel ComponentName="485-BAG2" Canvas.Left="348" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
