--- a/Prevu.Synoptics.V6120_Novatex/Pages/P810.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P810.xaml
@@ -40,8 +40,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="126" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-31-CV1" VisibilitySignal="LS2" Canvas.Left="200" Canvas.Top="82" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="114" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="818-31-CV1" VisibilitySignal="MAT1" Canvas.Left="325" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="126" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-31-CV1" VisibilitySignal="LS1" Canvas.Left="200" Canvas.Top="82" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="114" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="818-31-CV1" VisibilitySignal="MAT2" Canvas.Left="325" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -133,8 +133,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="249" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="818-31-CV1" VisibilitySignal="MAT2" Canvas.Left="371" Canvas.Top="82" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="62" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="818-31-CV1" VisibilitySignal="MAT2" Canvas.Left="585" Canvas.Top="108">
+        <Labels:Pipe Width="249" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="818-31-CV1" VisibilitySignal="MAT1" Canvas.Left="371" Canvas.Top="82" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="62" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="818-31-CV1" VisibilitySignal="MAT1" Canvas.Left="585" Canvas.Top="108">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -142,7 +142,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="112" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="77" Canvas.Top="82"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="146" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="808-31-CV1" VisibilitySignal="LS1" Canvas.Left="152" Canvas.Top="185">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="146" StatusComponent="578-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="808-31-CV1" VisibilitySignal="LS2" Canvas.Left="152" Canvas.Top="185">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -316,7 +316,7 @@
         <Labels:DeviceLabel ComponentName="808-31-CV1" Canvas.Left="145" Canvas.Top="22" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="850-01-MA1" Canvas.Left="924" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="849-01-MA1" Canvas.Left="1200" Canvas.Top="40" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="873-41-BAG" Canvas.Left="696" Canvas.Top="775" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="873-BAG" Canvas.Left="696" Canvas.Top="775" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="854-01-MA1" Canvas.Left="902" Canvas.Top="296" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="878-01-MA1" Canvas.Left="1020" Canvas.Top="716" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="877-01-MA1" Canvas.Left="1292" Canvas.Top="686" HorizontalAlignment="Left" VerticalAlignment="Center" />
