--- a/Prevu.Synoptics.V6120_Novatex/Pages/P880.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P880.xaml
@@ -240,10 +240,10 @@
         <Machines:V01_VS_Airlock Canvas.Left="1043" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="857" Canvas.Top="706" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:CV_Valve Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1266" Canvas.Top="741" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="16" Foreground="White" Text="{lex:Loc Sampling}" Canvas.Left="1298" Canvas.Top="722" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="16" d:Foreground="White" Text="{lex:Loc Sampling}" Canvas.Left="1298" Canvas.Top="722" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="880-HOPPER" DetailsPageName="D880" HideComponentName="True" Canvas.Left="414" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="890-HOPPER" DetailsPageName="D890" HideComponentName="True" Canvas.Left="990" Canvas.Top="224" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="880-48-LEV" Canvas.Left="446" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="880-48-LEV" Canvas.Left="446" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-41-LEV" Canvas.Left="316" Canvas.Top="416" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-01-ES2" Canvas.Left="260" Canvas.Top="544" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-01-ES3" Canvas.Left="510" Canvas.Top="544" HorizontalAlignment="Left" VerticalAlignment="Center"/>
