--- a/Prevu.Synoptics.V6120_Novatex/Pages/P997.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P997.xaml
@@ -18,14 +18,14 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="419" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="714" Canvas.Top="224" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="993-31-CV1" VisibilitySignal="MAT1"/>
-        <Labels:Pipe Width="90" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-31-CV1" VisibilitySignal="LS1" Canvas.Left="1017" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="90" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-31-CV1" VisibilitySignal="MAT1" Canvas.Left="1017" Canvas.Top="494" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="92" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-31-CV1" VisibilitySignal="LS2" Canvas.Left="1150" Canvas.Top="499" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="92" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="997-31-CV1" VisibilitySignal="MAT2" Canvas.Left="1150" Canvas.Top="499" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -68,6 +68,16 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="64" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="729" Canvas.Top="261" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="993-31-CV1" VisibilitySignal="MAT2"/>
+        <Labels:Pipe Width="240" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="419" Canvas.Top="224" VisibilityComponent="991-31-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="108" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="264" Canvas.Top="224" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="978-01-MA1" PipeHeight="Medium" Canvas.Left="452" Canvas.Top="297" VisibilityComponent="991-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="64" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="434" Canvas.Top="261" VisibilityComponent="991-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_BBF_DoubleBag Canvas.Left="986" Canvas.Top="506" Height="166" Width="286" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1047" Canvas.Top="385" Height="94" Width="164" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_Diverter Canvas.Left="645" Canvas.Top="217" Height="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -79,23 +89,6 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="1103" Canvas.Top="564" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="997-31-CV1" Canvas.Left="1163" Canvas.Top="354" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="997-SHAKE" Canvas.Left="1084" Canvas.Top="454" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="997-41-BAG" Canvas.Left="1018" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="997-42-BAG" Canvas.Left="1150" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="993-31-CV1" Canvas.Left="645" Canvas.Top="158" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="993-71-ES1" Canvas.Left="744" Canvas.Top="361" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:Pipe Width="240" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="419" Canvas.Top="224" VisibilityComponent="991-31-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="108" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="264" Canvas.Top="224" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="978-01-MA1" PipeHeight="Medium" Canvas.Left="452" Canvas.Top="297" VisibilityComponent="991-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="64" StatusComponent="978-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="434" Canvas.Top="261" VisibilityComponent="991-31-CV1" VisibilitySignal="LS2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_Diverter Canvas.Left="350" Canvas.Top="217" Height="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="4" Stroke="Black" Width="72" Canvas.Left="458" Canvas.Top="340" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="522" Canvas.Top="311" HorizontalAlignment="Left" VerticalAlignment="Center">
@@ -105,13 +98,20 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Labels:JumpLabel JumpFromLabel="991-31-CV1" JumpToLabel="978-01-MA1" Canvas.Left="183" Canvas.Top="194" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="991-31-CV1" Canvas.Left="350" Canvas.Top="158" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="991-71-ES1" Canvas.Left="419" Canvas.Top="357" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="20" Foreground="White" Text="{lex:Loc EXTRUSION}" Canvas.Left="421" Canvas.Top="425" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="20" Foreground="White" Text="{lex:Loc BUFFER SILOS}" Canvas.Left="707" Canvas.Top="630" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="20" d:Foreground="White" Text="{lex:Loc EXTRUSION}" Canvas.Left="421" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Right" FontSize="20" d:Foreground="White" Text="{lex:Loc BUFFER SILOS}" Canvas.Left="707" Canvas.Top="630" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_SLX_Silo Canvas.Left="651" Canvas.Top="432" Height="184" Width="130" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="939-71-ES2" TrendName="LEVEL" Color="DryMaterial"/>
         <Machines:V01_SLX_Silo Canvas.Left="795" Canvas.Top="432" Height="184" Width="130" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="939-71-ES3" TrendName="LEVEL" Color="DryMaterial"/>
+        <Labels:JumpLabel JumpFromLabel="991-31-CV1" JumpToLabel="978-01-MA1" Canvas.Left="183" Canvas.Top="194" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DetailsLabel ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="1103" Canvas.Top="564" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="997-31-CV1" Canvas.Left="1163" Canvas.Top="354" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="997-SHAKE" Canvas.Left="1084" Canvas.Top="454" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="997-BAG1" Canvas.Left="1018" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="997-BAG2" Canvas.Left="1150" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="993-31-CV1" Canvas.Left="645" Canvas.Top="158" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="993-71-ES1" Canvas.Left="744" Canvas.Top="361" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="991-31-CV1" Canvas.Left="350" Canvas.Top="158" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="991-71-ES1" Canvas.Left="419" Canvas.Top="357" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="993-71-ES2" Canvas.Left="671" Canvas.Top="479" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="993-71-ES3" Canvas.Left="815" Canvas.Top="479" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
