--- a/Prevu.Synoptics.V6389_Forever_Plast/Pages/P530.xaml
+++ b/Prevu.Synoptics.V6389_Forever_Plast/Pages/P530.xaml
@@ -12,7 +12,7 @@
     <Labels:Pipe Width="146" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="962" Canvas.Top="277" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_Material_Inlet_Outlet Canvas.Left="948" Canvas.Top="255" Height="54" Width="37" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe StatusComponent="534-01-MA1" RenderTransformOrigin="0.55,0.5" Width="121" Color="Air" Canvas.Left="558" Canvas.Top="525" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="112" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1047" Canvas.Top="329" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="228" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="989" Canvas.Top="387" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -30,13 +30,6 @@
     </Labels:Pipe>
     <Labels:Pipe Width="206" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="726" Canvas.Top="523" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="90" StatusComponent="534-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="882" Canvas.Top="482" HorizontalAlignment="Center" VerticalAlignment="Center">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <RotateTransform Angle="90"/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe Width="112" StatusComponent="538-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1047" Canvas.Top="485" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -74,7 +67,6 @@
     </Machines:V01_DV_Diverter>
     <Machines:V01_ScarpaTrasporto Canvas.Left="675" Canvas.Top="498" Height="38" Width="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_SA_Elutriator Canvas.Left="889" Canvas.Top="254" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_VS_Airlock Canvas.Left="1074" Canvas.Top="381" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Machines:V01_Material_Inlet_Outlet Canvas.Left="279" Canvas.Top="217" Height="70" Width="52" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Rectangle Height="50" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="458" Canvas.Top="227" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="429" Canvas.Top="172" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -87,8 +79,8 @@
         </TransformGroup>
       </Machines:External.RenderTransform>
     </Machines:External>
-    <Rectangle Height="2" Stroke="Black" Width="74" RenderTransformOrigin="0.5,0.5" Canvas.Left="1066" Canvas.Top="503" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1135" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Top">
+    <Rectangle Height="2" Stroke="Black" Width="74" RenderTransformOrigin="0.5,0.5" Canvas.Left="1066" Canvas.Top="504" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1135" Canvas.Top="476" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -97,7 +89,6 @@
     </Machines:External>
     <Labels:DetailsLabel ComponentName="530-DRY" DetailsPageName="D530" Canvas.Left="560" Canvas.Top="556" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="528-01-MA1" Canvas.Left="742" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="538-01-MA1" Canvas.Left="1144" Canvas.Top="389" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="527-71-ES3" Canvas.Left="339" Canvas.Top="176" Width="90" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="527-31-CV1" Canvas.Left="555" Canvas.Top="215" Width="90" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="538-71-ES2" Canvas.Left="1058" Canvas.Top="536" Width="90" HorizontalAlignment="Left" VerticalAlignment="Top"/>
