--- a/Prevu.Synoptics.V6120_Novatex/Pages/P212.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P212.xaml
@@ -77,7 +77,7 @@
         <Labels:DeviceLabel ComponentName="212-41-LS1" Canvas.Left="340" Canvas.Top="278" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="212-01-MA1" Canvas.Left="602" Canvas.Top="211" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="225-01-MA1" Canvas.Left="1030" Canvas.Top="229" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="227-41-BAG" Canvas.Left="883" Canvas.Top="567" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="227-BAG" Canvas.Left="883" Canvas.Top="567" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="227-02-EC1" Canvas.Left="838" Canvas.Top="324" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DetailsLabel ComponentName="227-BAG" DetailsPageName="D227" HideComponentName="True" Canvas.Left="983" Canvas.Top="567" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="225-01-MA1" JumpToLabel="226-01-MA1" Canvas.Left="1105" Canvas.Top="391" HorizontalAlignment="Left" VerticalAlignment="Top"/>
