--- a/Prevu.Synoptics.V6120_Novatex/Pages/P230.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P230.xaml
@@ -92,7 +92,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="166" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="401" Canvas.Top="697"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="229-21-CV1" Canvas.Left="233" Canvas.Top="719">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="229-31-CV1" Canvas.Left="233" Canvas.Top="719">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -124,7 +124,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="163" RenderTransformOrigin="0.5,0.5" StatusComponent="242-01-MA1" PipeHeight="Medium" Canvas.Left="1170" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="242-01-MA1" Canvas.Left="1001" Canvas.Top="714" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="229-32-CV1" Canvas.Left="1001" Canvas.Top="714" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
