--- a/Prevu.Synoptics.V6120_Novatex/Pages/P100.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P100.xaml
@@ -10,7 +10,7 @@
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="80" StatusComponent="127-01-MA1" Canvas.Left="1300" Canvas.Top="599" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
-        <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="110-01-MA1" Canvas.Left="565" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="109-01-MA1" Canvas.Left="565" Canvas.Top="633" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -42,7 +42,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="70" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="962" Canvas.Top="686" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="195" Color="Water" StatusComponent="110-01-MA1" Canvas.Left="403" Canvas.Top="652" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Left"/>
+        <Labels:Pipe Width="195" Color="Water" StatusComponent="109-01-MA1" Canvas.Left="403" Canvas.Top="652" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Left"/>
         <Labels:Pipe Width="215" Color="Water" StatusComponent="109-01-MA1" Canvas.Left="630" Canvas.Top="521" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="256" RenderTransformOrigin="0.5,0.5" StatusComponent="109-01-MA1" Canvas.Left="715" Canvas.Top="647" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -114,7 +114,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="50" StatusComponent="115-71-ECS1" Canvas.Left="342" Canvas.Top="367" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="50" StatusComponent="115-71-ES1" Canvas.Left="342" Canvas.Top="367" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
