--- a/Prevu.Synoptics.V6120_Novatex/Details/D195.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Details/D195.xaml
@@ -17,7 +17,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="46" StatusComponent="195-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="196-31-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Width="46" StatusComponent="195-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="196-31-CV1" VisibilitySignal="LS1" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
